--- a/Reporte.html
+++ b/Reporte.html
@@ -3,16 +3,11 @@
 <body>
 <p><h1>ERRORES</h1><p>
 <table border="1">
-<td>Error</td><td>Fila</td><td>Columna</td><tr><td>Caracter no valido: ¬</td><td>3</td><td>1</td></td>
-<tr><td>Caracter no valido: *</td><td>27</td><td>25</td></td>
-<tr><td>Caracter no valido: $</td><td>38</td><td>29</td></td>
-<tr><td>Caracter no valido: ?</td><td>54</td><td>10</td></td>
-<tr><td>Caracter no valido: =</td><td>60</td><td>7</td></td>
-<tr><td>Caracter no valido: ></td><td>135</td><td>7</td></td>
-<tr><td>Caracter no valido: *</td><td>138</td><td>24</td></td>
-<tr><td>Caracter no valido: +</td><td>140</td><td>40</td></td>
-<tr><td>Caracter no valido: Â</td><td>143</td><td>0</td></td>
-<tr><td>Caracter no valido: °</td><td>144</td><td>0</td></td>
+<td>Error</td><td>Fila</td><td>Columna</td><tr><td>Caracter no valido: (</td><td>2</td><td>1</td></td>
+<tr><td>Caracter no valido: 5</td><td>3</td><td>1</td></td>
+<tr><td>Caracter no valido: -</td><td>4</td><td>1</td></td>
+<tr><td>Caracter no valido: 1</td><td>5</td><td>1</td></td>
+<tr><td>Caracter no valido: )</td><td>6</td><td>1</td></td>
 </table>
 </body>
 </html>
